cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

#add_executable(untitled main.cpp)
#add_executable(untitled Stars.cpp)
#add_executable(untitled Numbers.cpp)
#add_executable(untitled PrimaryNumber.cpp)
#add_executable(untitled Factorial.cpp)
#add_executable(untitled EvvenOdd.cpp)
add_executable(untitled Average.cpp)
